<resources>
    <string name="app_name">YouCan</string>

    <!-- TODO: Remove or change this placeholder text -->

    <array name="onboardscreen">
        <item>@layout/fragment_onboardthree</item>
        <item>@layout/fragment_onboardtwo</item>
        <item>@layout/fragment_onboardthree</item>
    </array>


    <string name="track_activity">Track Your Activity</string>
    <string name="track_activity_content">Track your activity content Track your activity content Track your activity content Track your activity content</string>
    <string name="invite_your_friend">Invite Your Friend</string>
    <string name="invite_your_friend_content">invite your friend content  invite your friend content  invite your friend content  invite your friend content</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="consult_doctor_content">consult doctor content consult doctor content consult doctor content consult doctor content</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="new_user">New User ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_description">OTP will be send to the entered mobile number</string>
    <string name="continues">Continue</string>
    <string name="emptyusername">Enter your Name</string>
    <string name="emptymobilenumber">Enter your Number</string>
    <string name="verification">Verification</string>
    <string name="verification_description">Enter your OTP code here</string>
    <string name="verify_now">Verify now</string>
    <string name="resnd_otp">Resend OTP</string>
    <string name="resend_description">Please recheck your phone number for  resending the code</string>
    <string name="resend">Resend</string>
    <string name="lets_start">Amazing, let’s begin!</string>
    <string name="lets_start_description">we just need to ask you simple question to figure out the right plan for you</string>
    <string name="start_now">Start now</string>
    <string name="how_should_we_call_you">How should we call you?</string>
    <string name="how_should_we_call_you_description">You can choose whatever name you want.  We’ll keep it beteween you and us.</string>
    <string name="my_name_is">My name is</string>
    <string name="identification">How do you identify  yourself?</string>
    <string name="identification_description">We ask this to make sure your discovery is fun, healthy and balanced.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select gender</string>
    <string name="challenge">let us know what\'s your challenge?</string>
    <string name="challenge_description">you can check this later</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="stay_hydrated">Stay Hydrated</string>
    <string name="stay_healthy">Stay Healthy</string>
    <string name="cm">cm</string>
    <string name="height">How tall are you?</string>
    <string name="height_description">This helps us to define your body shape and calibrate your plan</string>
    <string name="kg">Kg</string>
    <string name="weight">How much do you weight?</string>
    <string name="weight_description">This helps us to determine your bmi  ( body mass index) .</string>
    <string name="goal_weight">What is your weight goal?</string>
    <string name="goal_weight_description1">Select your ideal weight goal.</string>
    <string name="goal_weight_description2">Based on your BMI we suggest</string>
    <string name="suggested">Suggested</string>
    <string name="select_challenge">Select your purpose</string>
    <string name="finish">Wohoo 🎉 \n Now let’s get you move in’</string>
    <string name="finish_description">have fun and get fit!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">profile</string>
    <string name="notification">Notifications</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_mygoals">My Goals</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
    <string name="you_walked">you walked </string>
    <string name="main_goal">Main Goal</string>
    <string name="state">State</string>
    <string name="edit">Edit</string>
    <string name="currentbmi">your current BMI</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="min">Min</string>
    <string name="goals"> Of Goals</string>
    <string name="topics_for_you">Topics for you</string>
    <string name="nutrition">Nutrition</string>
    <string name="home_gym">Home Gym</string>
    <string name="recipes">Recipes</string>
    <string name="discover">Discover</string>
    <string name="see_all">See All</string>
    <string name="health_calculator">Health Calculator</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="performance">performance</string>
    <string name="s">sat</string>
    <string name="facebook_application_id">2430490700538785</string>
    <string name="fb_login_protocol_scheme">fb2430490700538785</string>
    <string name="t">tue</string>
    <string name="thr">thr</string>
    <string name="sun">sun</string>
    <string name="w">wed</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="f">fri</string>
    <string name="m">mon</string>
    <string name="weight_txt">weight</string>
    <string name="calories">calories</string>
    <string name="increase">Increase</string>
    <string name="decrease">decrease</string>
    <string name="kcal">Kcal</string>
    <string name="water">water</string>
    <string name="heart_rate">heart rate</string>
    <string name="steps">steps</string>
    <string name="bpm">BPM</string>
    <string name="last_week">last week</string>
    <string name="total_steps">total steps</string>
    <string name="week_average">week average</string>
    <string name="activity">activity</string>
    <string name="month_average">month averag</string>
    <string name="last_month">last month</string>
    <string name="add_new">add</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="navdrawer_help">Help and Feedback</string>
    <string name="signout">Sign Out</string>
    <string name="Messages">Messages</string>
    <string name="item_removed_message">This is coming on next update :)</string>
    <string name="undo">return</string>
    <string name="update_profile">update</string>
    <string name="challenges">Challenges</string>
    <string name="breakfast">breakfast</string>
    <string name="dinner">dinner</string>
    <string name="snacks">snacks</string>
    <string name="lunch">lunch</string>
    <string name="querystring">search</string>
    <string name="gm">gm</string>
    <string name="protien">protien</string>
    <string name="burned">burned</string>
    <string name="carbs">carb</string>
    <string name="fat">fat</string>
    <string name="gained">gained</string>
    <string name="Left">left</string>
    <string name="distance">distance</string>
    <string name="km">Km</string>
    <string name="save">save</string>
    <string name="Reminder">Reminder</string>
    <string name="time_picked">Time Picked is :</string>
    <string name="Meal_Name">Meal Name</string>
    <string name="Submit">Submit</string>
    <string name="onboardone">you can trace your activities and record it on the app and show your actions daily</string>
    <string name="onboardtwo">the app offer you the chance to search for your friends and join you to run</string>
    <string name="onboardthree">the app assist you with a doctor consult and health nutiration daily</string>

    <string-array name="weightspinner">
        <item>Kg</item>
        <item>gram</item>
        <item>bound</item>

    </string-array>
    <string-array name="heightspinner">
        <item>Feet</item>
        <item>Cm</item>
        <item>Meter</item>

    </string-array>

    <string-array name="waterspinner">
        <item>Litre</item>
        <item>ml</item>
        <item>cup</item>

    </string-array>


</resources>
