<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_circle"
            android:title="Profile" />
        <item
            android:id="@+id/nav_Challenges"
            android:icon="@drawable/ic_challenges_nav"
            android:title="@string/challenges" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_notifications_button"
            android:title="@string/Reminder" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/Messages" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/navdrawer_help" />

    </group>


    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_logout"
        android:title="@string/signout" />


</menu>