<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_weight"
        android:textSize="18dp"
        android:maxEms="10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="#233249"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_weight_description1"
        android:textSize="14dp"
        android:gravity="center"
        android:maxEms="20"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="#9EA1A7"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_weight_description2"
            android:textSize="14dp"
            android:textColor="#9EA1A7"
            />
        <TextView
            android:id="@+id/suggestion_idealweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="80kg"
            android:textSize="14dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested"
            android:textSize="11sp"

            android:textColor="#C610A5A5"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            />
        <NumberPicker
            android:id="@+id/goal_weight_numberPicker"
            android:layout_width="56dp"
            android:layout_height="214dp"
            android:showDividers="none"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="22sp"
            android:textColor="#233249"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <Button
        android:id="@+id/question6_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>


</LinearLayout>