<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="18dp"
        android:maxEms="10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="#233249"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_description"
        android:textSize="14dp"
        android:gravity="center"
        android:maxEms="20"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="#9EA1A7" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="28dp">
        <NumberPicker
            android:id="@+id/height_numberPicker"
            android:layout_width="56dp"
            android:layout_height="214dp"
            android:showDividers="none"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:textSize="22sp"
            android:textColor="#233249"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/question4_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>


</LinearLayout>