<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:src="@drawable/question_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        android:textSize="18dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#233249"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_start_description"
        android:textSize="14dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#233249"
        />
    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_background"
        android:text="@string/start_now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>
     
</LinearLayout>