<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif"
        android:layout_marginStart="5dp"
        android:text="@string/activity"
        android:textColor="@color/darkGreyBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/darkGreyBlue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/total_steps"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/darkGreyBlue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/month_average"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/darkGreyBlue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/last_month"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/month_total_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/darkGreyBlue"
            android:textSize="17sp"
            android:textStyle="normal"
            android:text="20000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/month_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/darkGreyBlue"
            android:textSize="17sp"
            android:textStyle="normal"
            android:text="2000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/last_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="#17cc70"
            android:textSize="17sp"
            android:textStyle="normal"
            android:text="+30%"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>