<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification"
        android:textSize="18dp"
        android:maxEms="10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="#233249"
        android:layout_marginTop="55dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification_description"
        android:textSize="14dp"
        android:gravity="center"
        android:maxEms="20"
        android:layout_gravity="center_horizontal"

        android:textColor="#9EA1A7" />
    <RadioGroup
        android:id="@+id/gender_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/radiogroupbackground"
            android:button="@drawable/ic_boy"

            android:gravity="center"
            android:padding="5dp"
            android:text="male"
            android:textColor="@color/radio_text_statelist" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radiogroupbackground"
            android:button="@drawable/ic_girl"
            android:gravity="center"
            android:padding="5dp"
            android:text="female"

            android:textColor="@color/radio_text_statelist" />

    </RadioGroup>
    <Button
        android:id="@+id/question2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>

</LinearLayout>